--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,8 @@ textarea {
    ========================================================================== */
 
 /* Sprite Editor Styles */
-* {
+html {
+  box-sizing: border-box;
   font-size: 16px;
 }
 
